Work around clang-cl bug to fix media_unittests link failure

TBR=wolenetz

Bug: 771710
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id2de82dfda1fc003ed3a8095ad000e7a21f3feb9
Reviewed-on: https://chromium-review.googlesource.com/701456
Commit-Queue: Hans Wennborg <hans@chromium.org>
Reviewed-by: Matthew Wolenetz <wolenetz@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506554}
Former-commit-id: 6489c3bf719ff00615a7946c0a4bb72bb8e44b2e